# rs_ofd

./: .gitignore  033002200811_26192800.ofd  1638367527374.ofd  Cargo.toml  LICENSE  README.md  dzfp_23442000000075223501_20230601201823.ofd
src/: backends.rs  lib.rs  main.rs  node_draw.rs  ofd.rs  raqote_draw.rs  scrawl.rs  skia_draw.rs
src/utils/: mod.rs  node_draw.rs
