[package]
authors = ["Tim/Wang Ye <geniusnut@gmail.com>"]
name = "image_demo"
version = "0.1.0"
edition = "2021"
description = "OFD invoice to image"
readme = "README.md"
keywords = ["OFD", "发票", "png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["skia"]
skia = ["dep:skia-safe"]
raqote = ["dep:raqote", "dep:sw-composite", "dep:euclid"]

[dependencies]
image = "0.24.5"
jbig2dec = "0.3"
imageproc = "0.23"
compress = "0.2.1"
zip = "0.6.3"
log = "0.4.17"
env_logger = "0.10.0"
xmltree = "0.10.3"
roxmltree = "0.18.0"
raqote = { git="https://github.com/geniusnut/raqote.git", optional = true }
font-kit = {version="0.11.0", features=["loader-freetype"]}
lazy_static = "1.4.0"
send_wrapper = "0.6.0"
euclid = { version = "0.22.9" , optional = true}
serde = {version="1.0.130", features=["derive"]}
serde-xml-rs = "0.6.0"
quick-xml = {version="0.30.0", features =["overlapped-lists", "serialize"] }
sw-composite = { version = "0.7.16", optional = true }
#[cfg(feature = "skia")]
skia-safe = { version = "0.68.0", optional = true }

[[bin]]
name = "ofd_demo"